--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,6 +9,7 @@ chardet==3.0.4
 constantly==15.1.0
 cryptography==2.1.4
 cssselect==1.0.3
+dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.0.2
 django-storages==1.6.5
